lavc/jpeg2000dec: Allow to force a compatible pix_fmt.

This copies the behaviour of the libopenjpeg decoder.
Fixes ticket #5919.